# mercury

./: .cproject  .gitignore  .project  CHANGELOG  INTERNALS  Makefile  README.md  TODO.md  configure_audio.bat  mercury.conf.example  mercury.doxyfile  test_gearshift.bat
docs/: Mercury_Quick_Manual.docx
docs/fsm/: ARQ_FSM.md  arq_connection.drawio  arq_res.drawio
docs_FSM/: arq_com.drawio
examples/: Makefile  README.md  receiver  receiver.c  transmitter  transmitter.c
include/: alsa_sound_dev.h  arq.h  awgn.h  configurations.h  data_container.h  defines.h  error_rate.h  fifo_buffer.h  fir_filter.h  hermes_ldpc.h  hermes_normal_14_16.h  hermes_normal_2_16.h  hermes_normal_8_16.h  interleaver.h  ldpc.h  ldpc_decoder_GBF.h  misc.h  ofdm.h  plot.h  psk.h  tcp_socket.h  telecom_system.h  timer.h
include/audioio/: audioio.h
include/common/: common_defines.h  config_parser.h  os_interop.h  ring_buffer_posix.h  shm_posix.h
include/datalink_layer/: arq.h  crc6.h  datalink_config.h  datalink_defines.h  fifo_buffer.h  fsm.h  net.h  tcp_socket.h  timer.h
include/gui/: gui_main.h  gui_state.h  ini_parser.h
include/physical_layer/: alsa_sound_dev.h  awgn.h  crc16_modbus_rtu.h  data_container.h  error_rate.h  fir_filter.h  hermes_ldpc.h  hermes_normal_14_16.h  hermes_normal_2_16.h  hermes_normal_8_16.h  interleaver.h  interpolator.h  ldpc.h  ldpc_decoder_GBF.h  ldpc_decoder_SPA.h  mercury_ldpc.h  mercury_met_2_16.h  mercury_normal_14_16.h  mercury_normal_1_16.h  mercury_normal_2_16.h  mercury_normal_3_16.h  mercury_normal_4_16.h  mercury_normal_5_16.h  mercury_normal_6_16.h  mercury_normal_8_16.h  mfsk.h  misc.h  ofdm.h  physical_config.h  physical_defines.h  plot.h  psk.h  telecom_system.h
source/: alsa_sound_dev.cc  arc_commander.cc  arc_responder.cc  arq_common.cc  awgn.cc  configurations.cc  data_container.cc  error_rate.cc  fifo_buffer.cc  fir_filter.cc  hermes_normal_14_16.cc  hermes_normal_2_16.cc  hermes_normal_8_16.cc  interleaver.cc  ldpc.cc  ldpc_decoder_GBF.cc  main.cc  misc.cc  ofdm.cc  plot.cc  psk.cc  tcp_socket.cc  telecom_system.cc  timer.cc
source/audioio/: Makefile  audioio.c  audioio.h  std.h
source/common/: config_parser.cc  os_interop.cc  ring_buffer_posix.c  ring_buffer_posix.cc  shm_posix.c  shm_posix.cc
source/datalink_layer/: arith.cc  arq.cc  arq_commander.cc  arq_common.cc  arq_responder.cc  crc6.cc  datalink_config.cc  fifo_buffer.cc  fsm.cc  net.cc  tcp_socket.cc  timer.cc
source/gui/: gui_main.cc  ini_parser.cc
source/physical_layer/: alsa_sound_dev.cc  awgn.cc  crc16_modbus_rtu.cc  data_container.cc  error_rate.cc  fir_filter.cc  hermes_normal_14_16.cc  (+23 more)
systemd/: modem.service
tests/: Mercury_channel_test.grc
tests/gr-hermes_ofdm/lib/: CMakeLists.txt  deframer_impl.cc  deframer_impl.h  framer_impl.cc  framer_impl.h  gi_adder_impl.cc  gi_adder_impl.h  gi_remover_impl.cc  gi_remover_impl.h  qa_hermes_ofdm.cc  qa_hermes_ofdm.h  test_hermes_ofdm.cc  zero_depadder_impl.cc  zero_depadder_impl.h  zero_padder_impl.cc  zero_padder_impl.h
tools/: BENCHMARK_GUIDE.md  analyze_turboshift_log.py  awgn_turboshift_test.py  mercury_benchmark.py  punctured_ber_test.py  robust_loopback_test.py  throughput_test.py
(+80 files in other folders)
